<resources>
    <string name="app_name">LDAR</string>
    <string name="device_manage">装置管理</string>
    <string name="device_detail">装置详情</string>
    <string name="equipment_manage">设备管理</string>
    <string name="tag_manage">标签管理</string>
    <string name="component_manage">组件管理</string>
    <string name="component_manage1">密封点建档</string>

    <string name="equipment_detail">设备详情</string>
    <string name="equipment_info">设备信息</string>
    <string name="area_manage">区域管理</string>
    <string name="take_photo">拍照</string>
    <string name="area_detail">区域详情</string>
    <string name="part_detail">组件详情</string>
    <string name="task_list">任务清单</string>
    <string name="task_detail">任务详情</string>

    <string name="base_data">基础数据</string>

    <string name="search_hint">搜索</string>
    <string name="department">部门:</string>
    <string name="department1">部门</string>
    <string name="device_type">装置类型:</string>
    <string name="device_type1">装置类型</string>
    <string name="test_start_date">开始检测日期:</string>
    <string name="device_info">装置信息</string>
    <string name="base_info">基本信息</string>
    <string name="chemical_details">化学品明细</string>
    <string name="product_flow_info">产品流信息</string>
    <string name="product_flow">产品流</string>
    <string name="product_flow_detail">产品流详情</string>
    <string name="pid_drawing_no">PID图号</string>
    <string name="seal_material">密封材质</string>


    <string name="location_info">位置信息</string>
    <string name="extend_num">扩展号</string>
    <string name="label_num">标签号</string>
    <string name="reference">参考物</string>
    <string name="orientation">方向</string>
    <string name="distance">距离</string>
    <string name="floor">楼层</string>
    <string name="height">高度</string>
    <string name="additional_desc">附加描述</string>
    <string name="main_info">主要信息</string>
    <string name="seal_point">密封点</string>
    <string name="seal_type">密封点子类型</string>


    <string name="area">区域</string>
    <string name="area_name">区域名称</string>
    <string name="equipment">设备</string>
    <string name="equipment_name">设备名称</string>
    <string name="device">装置</string>
    <string name="device_name">名称</string>
    <string name="device_name1">装置名称</string>
    <string name="device_code">编号</string>
    <string name="capacity">产能</string>
    <string name="put_into_production_date">投产日期</string>
    <string name="enabled">是否可用</string>
    <string name="if_effective">是否有效</string>
    <string name="if_effective_0">无效</string>
    <string name="if_effective_1">有效</string>
    <string name="order">顺序</string>
    <string name="divulge_submit_mailbox">泄露提报邮箱</string>
    <string name="enabled_0">不可用</string>
    <string name="enabled_1">可用</string>
    <string name="pass_0">未通过</string>
    <string name="pass_1">通过</string>
    <string name="progress_0">未完成</string>
    <string name="progress_1">已完成</string>

    <!-- 任务清单 -->
    <string name="check_result_upload">检测结果上传</string>
    <string name="label_info">标签信息:</string>
    <string name="upload_date">上传时间:</string>
    <string name="download_task">下载任务</string>

    <!-- 任务详情 -->
    <string name="part_amount">组件数</string>
    <string name="checked">已检测</string>
    <string name="leak_amount">泄漏数</string>
    <string name="start_check">开始检测</string>
    <string name="weather_params">气象参数</string>

    <!-- 气象 -->
    <string name="temperature">温度(℃)</string>
    <string name="humidity">湿度(%RH)</string>
    <string name="wind_speed">风速(米/秒)</string>
    <string name="wind_direction">风向</string>
    <string name="pressure">气压(hPa)</string>

    <!-- 组件检测 -->
    <string name="part_check">组件检测</string>
    <string name="seal_point_check">密封点检测</string>
    <string name="part_info">组件信息</string>
    <string name="part_imgs">组件图片</string>
    <string name="reread">重新读数</string>
    <string name="read_value">读数</string>
    <string name="last">上一个</string>
    <string name="next">下一个</string>

    <!-- 漂移校准 -->
    <string name="drift_correct">漂移校准</string>
    <string name="daily_correct">日常校准</string>
    <string name="standard_gas">标准气</string>
    <string name="standard_gas_read_value">标准气读数</string>
    <string name="ppm_threshold_value">PPM阈值</string>
    <string name="correct_read_value">校准读数</string>
    <string name="response_time">响应时间</string>
    <string name="if_pass">是否通过</string>


    <string name="belong_device">所属装置:</string>
    <string name="belong_device1">所属装置</string>
    <string name="belong_area">所属区域</string>
    <string name="belong_area1">所属区域:</string>
    <string name="medium_status">介质状态:</string>
    <string name="medium_status1">介质状态</string>
    <string name="size">尺寸</string>
    <string name="main_medium">主要介质</string>
    <string name="annual_run_time">年运行时间</string>
    <string name="manufacturer">生产厂家</string>
    <string name="path_num">路径号</string>
    <string name="unreachable">不可达</string>
    <string name="unreachable_reason">不可达原因</string>
    <string name="keep_warm">保温</string>
    <string name="secondary_info">次要信息</string>
    <string name="barcode">条形码</string>
    <string name="operate_temp">操作温度</string>
    <string name="operate_pressure">操作压力</string>
    <string name="change_manage_id">变更管理ID</string>
    <string name="replace_date">替换日期</string>
    <string name="control_equipment_and_close_sys">控制设备 <br /> 和密闭通风 <br />  系统</string>
    <string name="control_equipment_and_close_type">控制设备<br /> 和密闭通风 <br /> 类型</string>

    <string name="upload_tip">确定上传吗？</string>
    <string name="delete_tip">确定删除吗？</string>
    <string name="clear_cache_tip">确定清空缓存吗？</string>

    <string name="not_data">暂无数据，点击刷新</string>
    <string name="not_data1">当前暂无任务，请点击按钮下载任务</string>
    <string name="search_success">查询成功！</string>
    <string name="search_fail">查询失败！</string>
    <string name="parse_fail">解析失败！</string>
    <string name="return_empty">查询数据为空！</string>
    <string name="login_success">登录成功！</string>
    <string name="login_fail">登录失败！</string>
    <string name="logout_success">登出成功！</string>
    <string name="logout_fail">登出失败！</string>
    <string name="request_fail">请求失败！</string>
    <string name="download_fail">下载失败！</string>
    <string name="download_success">下载成功！</string>
    <string name="upload_fail">上传成功！</string>
    <string name="upload_success">上传成功！</string>

    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>

    <string name="account">账号</string>
    <string name="account_hint">请输入账号</string>
    <string name="account_tip">请先输入账号！</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_tip">请先输入密码！</string>
    <string name="login">登录</string>


    <string name="task">任务</string>
    <string name="put_on_record">建档</string>
    <string name="upload_download">上传下载</string>
    <string name="search">查询</string>
    <string name="user">用户</string>
    <string name="tip">提示</string>
    <string name="download_tip">再次下载将会覆盖历史任务信息，是否确认下载？</string>
    <string name="continue_position">位置延续</string>
    <string name="continue_last">延续上次</string>
    <string name="edit">修改</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="please_enter">请输入</string>
    <string name="please_select">请选择</string>
    <string name="submit">提交</string>
    <string name="submit_fail">提交失败！</string>
    <string name="submit_success">提交成功！</string>

    <string name="sure">确定</string>

    <string name="save">保存</string>
    <string name="recall">撤回</string>
    <string name="remake">重拍</string>


    <string name="lan_da">蓝达</string>
    <string name="change_password">修改密码</string>
    <string name="clear_cache">清空缓存</string>
    <string name="exit">退出登录</string>


    <string name="username_empty_tip">登录人编号为空！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="version_update">版本更新</string>
    <string name="configure">配置</string>
    <string name="select_configure_ip">选择配置IP</string>
    <string name="custom_configure_ip">自定义配置IP</string>

    <string name="tag_num_hint">请输入标签号</string>
    <string name="reference_hint">请输入参考物</string>
    <string name="distance_hint">请输入距离(米)</string>
    <string name="height_hint">请输入高度(米)</string>
    <string name="floor_level_hint">请输入楼层</string>
    <string name="size_hint">请输入尺寸(mm)</string>
    <string name="manufacturer_hint">请输入生产厂家</string>
    <string name="production_date_hint">请选择投产日期</string>
    <string name="unreachable_reason_hint">请输入不可达原因</string>
    <string name="oper_temper_hint">请输入操作温度(℃)</string>
    <string name="oper_pressure_hint">请输入操作压力(MPa)</string>
    <string name="barcode_hint">请输入条形码</string>
    <string name="detection_freq_hint">请输入检测频率/AOV检测频率</string>
    <string name="leakage_threshold_hint">请输入泄漏阈值/DPM</string>


</resources>