<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    android:background="@drawable/bg_rec_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/tip"
        android:textColor="@color/c_303133"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_tip_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_24"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/download_tip"
        android:textColor="@color/c_606266"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/c_DCDFE6" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_13"
            android:paddingRight="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/cancel"
            android:textColor="@color/c_409EFF"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_13"
            android:paddingRight="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/edit"
            android:textColor="@color/c_409EFF"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_13"
            android:paddingRight="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/confirm"
            android:textColor="@color/c_409EFF"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>