<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TakePhotoActivity">

    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_409EFF"
        app:tb_actionPadding="@dimen/dp_20"
        app:tb_barHeight="@dimen/dp_45"
        app:tb_immersive="true"
        app:tb_leftImageResource="@mipmap/ic_arrow_left"
        app:tb_leftText=""
        app:tb_sideTextPadding="@dimen/dp_20"
        app:tb_titleText="@string/take_photo"
        app:tb_titleTextSize="@dimen/sp_16"
        app:tb_useThemeColor="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.equipmentmanage.app.view.TagImageView
            android:id="@+id/tagImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="visible">

            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
                android:id="@+id/sb_recall"
                style="@style/superButton_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/recall"
                android:textColor="@color/white"
                app:sSelectorDisableColor="@color/white"
                app:sSelectorNormalColor="@color/c_409EFF"
                app:sSelectorPressedColor="@color/c_80409EFF"
                app:sStrokeColor="@color/c_FF9900"
                app:sStrokeWidth="@dimen/dp_1"
                android:visibility="gone"/>

            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
                android:id="@+id/sb_remake"
                style="@style/superButton_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/remake"
                android:textColor="@color/white"
                app:sSelectorDisableColor="@color/white"
                app:sSelectorNormalColor="@color/c_409EFF"
                app:sSelectorPressedColor="@color/c_80409EFF"
                app:sStrokeColor="@color/c_FF9900"
                app:sStrokeWidth="@dimen/dp_1"
                android:visibility="visible"/>

            <com.xuexiang.xui.widget.textview.supertextview.SuperButton
                android:id="@+id/sb_save"
                style="@style/superButton_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/save"
                android:textColor="@color/white"
                app:sSelectorDisableColor="@color/white"
                app:sSelectorNormalColor="@color/c_409EFF"
                app:sSelectorPressedColor="@color/c_80409EFF"
                app:sStrokeColor="@color/c_409EFF"
                app:sStrokeWidth="@dimen/dp_1"
                android:visibility="visible"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>