<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xui_config_color_blue"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!--账号-->
        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_12"
            android:background="@drawable/bg_rec_white1"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_13"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_13">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/account_hint"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/sp_14" />

            <ImageButton
                android:id="@+id/imb_clear_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_3"
                android:layout_marginRight="@dimen/dp_3"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="@dimen/dp_5"
                android:src="@mipmap/ic_clear"
                android:visibility="invisible" />
        </RelativeLayout>

        <!--密码-->
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_12"
            android:background="@drawable/bg_rec_white1"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_13"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_13">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/password_hint"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/sp_14"
                android:inputType="textPassword"/>

            <ImageButton
                android:id="@+id/imb_clear_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_3"
                android:layout_marginRight="@dimen/dp_3"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:padding="@dimen/dp_5"
                android:src="@mipmap/ic_clear"
                android:visibility="invisible" />
        </RelativeLayout>


        <!--登录-->
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_12"
            android:background="@drawable/bg_click_white"
            android:gravity="center"
            android:paddingTop="@dimen/dp_13"
            android:paddingBottom="@dimen/dp_13"
            android:text="@string/login"
            android:textColor="@color/c_409EFF"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>